플랫폼 리펙토링

--- a/jwebppy/src/main/resources/templates/platform/common/lang.html
+++ b/jwebppy/src/main/resources/templates/platform/common/lang.html
@@ -20,7 +20,7 @@
 					<div class="ui one column grid">
 					    <div class="column right aligned">
 					    	<div id="BTN_saveLang" class="ui teal button"><i class="check icon"></i> Save</div>
-					    	<div id="BTN_deleteLang" class="ui teal negative button" style="display:none;"><i class="minus icon"></i> Delete</div>
+					    	<div id="BTN_deleteLang" class="ui teal button" style="display:none;"><i class="minus icon"></i> Delete</div>
 					        <div id="BTN_cancelWriteLang" class="ui normal button"><i class="times icon"></i> Cancel</div>			        
 					    </div>
 					</div>
