--- a/jwebppy/src/main/resources/templates/error.html
+++ b/jwebppy/src/main/resources/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title th:text="#{PLTF_TXT_0006}"></title>
+		<title th:text="#{PLTF_T_0006}"></title>
 		<!-- Meta -->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -51,7 +51,7 @@
 			<li> </li>
 		</ul>
 		<div class="split"></div>
-		<button class="logout-button" th:text="#{DIVEU_BTN_0040}"></button>
+		<button class="logout-button" th:text="#{DIVEU_B_0040}"></button>
 	</div>
 </div>
 <div style="width:100%;height:5px;opacity:0;"></div>
@@ -70,11 +70,11 @@
 	<div style="margin-top:138px;">
 		<img src="/portal/img/popup/alert.png">
 	</div>
-	<div style="margin-top: 20px;" th:if="${status == 401 || status == 403}" th:text="#{DIVEU_MSG_0048}"></div>
-	<div style="margin-top: 20px;" th:unless="${status == 401 || status == 403}" th:text="#{DIVEU_MSG_0026}"></div>
+	<div style="margin-top: 20px;" th:if="${status == 401 || status == 403}" th:text="#{DIVEU_M_0048}"></div>
+	<div style="margin-top: 20px;" th:unless="${status == 401 || status == 403}" th:text="#{DIVEU_M_0026}"></div>
 	<div style="width:auto; height:220px; background-color: #f9f9f9; margin: 40px 40px 0 40px;">
 		<div style="height: 30px;"></div>
-		<button id="BTN_goMain" class="gomain-button"><span th:text="#{DIVEU_BTN_0030}"></span> <img src="/portal/img/common/arrow_right.png"></button>
+		<button id="BTN_goMain" class="gomain-button"><span th:text="#{DIVEU_B_0030}"></span> <img src="/portal/img/common/arrow_right.png"></button>
 	</div>
 </div>
 
@@ -87,7 +87,7 @@
 		<div class="logo-area">
 			<img class="footer-logo" th:src="@{/portal/img/logo-s.png}">
 			<div class="split"></div>
-			<div class="copylight" th:text="#{DIVEU_TXT_0067}"></div>
+			<div class="copylight" th:text="#{DIVEU_T_0067}"></div>
 		</div>
 		<div>
 			<button>Language</button>
