--- a/jwebppy/src/main/resources/templates/platform/layout/common/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/index.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<head>
-		<title th:text="#{PLTF_TXT_0006}"></title>
+		<title th:text="#{PLTF_T_0006}"></title>
 		<!-- Meta -->
 		<th:block th:replace="platform/layout/common/fragments/meta"></th:block>
 		<!-- CSS -->
