--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
@@ -30,7 +30,7 @@
 	<div class="ui center aligned container">
 		<!-- img class="ui centered image" th:src="@{/portal/img/head_logo.png}" alt="jWebppy"/ -->
 		<div class="ui horizontal inverted small divided link list">
-			<a class="item" href="#" th:text="#{PLTF_TXT_COPYLEFT}"></a>
+			<a class="item" href="#" th:text="#{PLTF_T_COPYLEFT}"></a>
 		</div>
 	</div>
 </div>
@@ -58,12 +58,12 @@ $(document).ajaxStop(function() {
 $(document).ajaxError(function(event, jqXHR, ajaxSettings, thrownError) {
 	if (jqXHR.status == "401" || jqXHR.status == "403")
 	{
-		alert("[[#{PLTF_MSG_SESSION_EXPIRED}]]");
+		alert("[[#{PLTF_M_SESSION_EXPIRED}]]");
 		document.location.href = "/";
 	}
 	else
 	{
-		alert("[[#{PLTF_MSG_ERROR_MESSAGE}]]");
+		alert("[[#{PLTF_M_ERROR_MESSAGE}]]");
 		//document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).ERROR_PAGE_URL}]]";
 	};
 });
