--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -10,54 +10,56 @@
   Content
   <div class="sub header">You can create Page or consist of Menu and Role. The content is translated into other languages.</div>
 </div>
-<div class="ui stackable grid">
-	<div class="row">
-		<div class="nine wide column">
-			<div class="ui dividing small header">Structure</div>
-			<div class="ui segment teal">
-				<div id="TREE_items"></div>
-			</div>
-		</div>
-		<div class="seven wide column">
-			<div id="AREA_createItem" class="field">
-				<div class="ui dividing small header">Attributes</div>
-				<div id="TAB_viewItem" class="ui attached tabular menu">
-					<a class="item active wrap" data-tab="general">General</a>
-					<a class="item wrap" data-tab="language">Language</a>
+<div class="ui segment">
+	<div class="ui stackable grid">
+		<div class="row">
+			<div class="nine wide column">
+				<div class="ui dividing small header">Structure</div>
+				<div class="ui segment teal">
+					<div id="TREE_items"></div>
 				</div>
-				<div class="ui bottom attached segment">
-					<form id="FORM_modifyItem" class="ui form">
-					<input type="hidden" name="cSeq"/>
-					<input type="hidden" name="pSeq"/>
-						<div class="AREA_modifyItem" style="display: none;">
-							<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
-							<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
-							<div class="ui clearing divider"></div>									
-						</div>
-						<div class="AREA_moveToModifyItem" style="display: none;">
-							<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
-							<div class="ui clearing divider"></div>
-						</div>
-						<div class="AREA_moveToViewLang" style="display: none;">
-							<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
-							<div class="ui clearing divider"></div>
-						</div>
-						<div class="ui segment tab teal" data-tab="general"></div>
-						<div class="ui segment tab teal" data-tab="language"></div>
-						<div class="AREA_modifyItem" style="display: none;">
-							<div class="ui clearing divider"></div>
-							<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
-							<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
-						</div>
-						<div class="AREA_moveToModifyItem" style="display: none;">
-							<div class="ui clearing divider"></div>
-							<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
-						</div>
-						<div class="AREA_moveToViewLang" style="display: none;">
-							<div class="ui clearing divider"></div>
-							<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
-						</div>								
-					</form>
+			</div>
+			<div class="seven wide column">
+				<div id="AREA_createItem" class="field">
+					<div class="ui dividing small header">Attributes</div>
+					<div id="TAB_viewItem" class="ui secondary pointing menu">
+						<a class="item active wrap" data-tab="general">General</a>
+						<a class="item wrap" data-tab="language">Language</a>
+					</div>
+					<div class="ui bottom attached segment">
+						<form id="FORM_modifyItem" class="ui form">
+						<input type="hidden" name="cSeq"/>
+						<input type="hidden" name="pSeq"/>
+							<div class="AREA_modifyItem" style="display: none;">
+								<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
+								<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
+								<div class="ui clearing divider"></div>									
+							</div>
+							<div class="AREA_moveToModifyItem" style="display: none;">
+								<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
+								<div class="ui clearing divider"></div>
+							</div>
+							<div class="AREA_moveToViewLang" style="display: none;">
+								<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
+								<div class="ui clearing divider"></div>
+							</div>
+							<div class="ui segment tab teal" data-tab="general"></div>
+							<div class="ui segment tab teal" data-tab="language"></div>
+							<div class="AREA_modifyItem" style="display: none;">
+								<div class="ui clearing divider"></div>
+								<div class="ui teal button BTN_saveItem"><i class="check icon"></i> Save</div>
+								<div class="ui button modify BTN_cancelItem"><i class="times icon"></i> Cancel</div>
+							</div>
+							<div class="AREA_moveToModifyItem" style="display: none;">
+								<div class="ui clearing divider"></div>
+								<div class="ui teal button BTN_modifyItem"><i class="edit outline icon"></i> Modify</div>
+							</div>
+							<div class="AREA_moveToViewLang" style="display: none;">
+								<div class="ui clearing divider"></div>
+								<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
+							</div>								
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
