--- a/jwebppy/src/main/resources/static/platform/css/login/login.css
+++ b/jwebppy/src/main/resources/static/platform/css/login/login.css
@@ -33,7 +33,7 @@ body .header .button {
 body .header .button:hover {
 	text-decoration: underline;
 }
-body .body { margin:0 auto; margin: 17px 40px 0px 40px}
+body .body {margin:0 auto;}
 
 @media screen and (min-width: 1701px) {
 	body .login-box {
@@ -41,11 +41,16 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 		background:rgba(0, 0, 0, 0.6);
 		border-radius: 4px;
 		position:absolute;
+		left: 80px;
+		top:80px;			
+		/*
 		left: 160px;
 		top:165px;
+		*/
 	}
 	body .body .login-box .title {
-		width: 211px;
+		/* width: 211px; */
+		width: 400px;
 		height: 45px;
 		font-size: 30px;
 		font-weight: bold;
@@ -98,7 +103,7 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 		width: 520px;
 		height: 70px;
 		border-radius: 4px;
-		background-color: #003081;
+		background-color: #1EA7D9;
 		position: relative;
 		left: 40px;
 		top: 85px;	
@@ -113,7 +118,7 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 	body .body .login-box .bottom {
 		width: 520px;
 		position: relative;
-		left: 0px;
+		left: 40px;
 		top: 100px;
 		text-align: left;
 		color: #ffffff;
@@ -158,8 +163,12 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 		background:rgba(0, 0, 0, 0.6);
 		border-radius: 4px;
 		position:absolute;
+		left: 80px;
+		top:80px;		
+		/*
 		left: 133px;
 		top:137px;
+		*/
 	}
 	body .body .login-box .title {
 		width: 211px;
@@ -215,7 +224,7 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 		width: 431px;
 		height: 58px;
 		border-radius: 4px;
-		background-color: #003081;
+		background-color: #1EA7D9;
 		position: relative;
 		left: 33px;
 		top: 71px;
@@ -230,7 +239,7 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 	body .body .login-box .bottom {
 		width: 431px;
 		position: relative;
-		left: -7px;
+		left: 33px;
 		top: 83px;
 		text-align: left;
 		color: #ffffff;
@@ -274,24 +283,25 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 	}	
 }
 
-body .wrap .bottom {position: relative; bottom: 0; width:100%; margin-left: 40px; margin-right: 40px;}
-body .wrap .bottom .personal-policy {height:60px; line-height: 20px; color: #363636; margin-top:20px; float: left;}
+body .wrap .bottom {position: fixed; bottom: 0; width:100%; background-color: #35363A}
+body .wrap .bottom .personal-policy {height:60px; line-height: 20px; color: #ffffff; margin-top:20px; float: left;}
 /* body .wrap .bottom .gdpr {width:130px; height:20px; margin-left: 5px; margin-top: 41px; cursor: pointer;} */
 body .wrap .bottom .gdpr {cursor: pointer;}
 body .wrap .bottom .line {
   width: 100%;
   height: 0;
-  border: solid 2px #dddddd;
+  border: solid 1px #9F9D9E;
   margin-top: 53px;
 }
 body .wrap .bottom .copy-right {	
-	margin: 25px 0 25px 0;
+	margin: 15px 0 15px 0;
 	line-height: 1.64;	
 	color: #363636;
 	text-align: center;
 }
 body .wrap .bottom .copy-right .text {
 	margin-left: 10px;
+	color: #ffffff;
 }
 input {
 	outline: none;
