플랫폼 리펙토링

--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/main.html
@@ -70,7 +70,7 @@
 <input type="hidden" name="lSeq"/>
 </form>
 <!-- Start add language -->
-<th:block th:replace="/platform/common/lang :: addLang"></th:block>
+<th:block th:replace="/platform/mgmt/i18n/lang :: addLang"></th:block>
 <!-- End add language -->
 <script type="application/javascript">
 
