--- a/jwebppy/src/main/resources/templates/platform/mgmt/i18n/main.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/i18n/main.html
@@ -47,7 +47,7 @@
 	</form>
 </div>
 <!-- Start add language -->
-<th:block th:replace="/platform/common/lang :: addLang"></th:block>
+<th:block th:replace="/platform/mgmt/i18n/lang :: addLang"></th:block>
 <!-- End add language -->
 <script type="application/javascript">
 	$(document).ready(function() {
