--- a/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
+++ b/jwebppy/src/main/resources/templates/platform/security/authentication/login_form.html
@@ -15,13 +15,12 @@
 <script type="application/javascript" th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script type="application/javascript" th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
 <script type="application/javascript">
-$(window).resize(function() {
-	resizeView();	
+$(window).load(function() {
+	showLoginBox();
 });
 
-$(window).load(function() {
-	resizeView();
-	showLoginBox();
+$(window).resize(function() {
+	resizeView();	
 });
 
 /*
@@ -143,7 +142,6 @@ $(document).ready(function() {
 	if ($.trim($.cookie("username")) != "")
 	{
 		$("#username").val($.cookie("username"));
-		$("#password").focus();
 	};	
 	
 	$(".btn-login").on("click", function() {
@@ -187,13 +185,7 @@ $(document).ready(function() {
 		$(this).find("img").attr("src", src);
 	});
 	
-	$(".gdpr").on("click", function() {
-		document.location.href = "/platform/img/login/Doosan_General_Data_Protection_Policy.docx";
-	});
-	
-	$("#IMG_doobizPlus").on("click", function() {
-		document.location.href = "/forward/entry_point";
-	});	
+	resizeView();
 });
 
 function showLoginBox()
@@ -206,7 +198,7 @@ function showLoginBox()
 <div style="position: fixed; cursor: pointer;" onclick="showLoginBox()">
 	<img th:src="@{/platform/img/login/idea_100.jpg}" alt="Login Button" />
 </div>
-<div style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;" onclick="window.open('/')">New Window</div>
+<div id="openNewWindow" style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;">New Window</div>
 <form id="FORM_login" method="post" onsubmit="return loginCheck();">
 <input type="hidden" id="token" name="token" />
 <input type="hidden" id="saveUsername" name="saveUsername" />
@@ -217,7 +209,7 @@ function showLoginBox()
 	<div class="body">
 		<div class="login-box" style="display:none;">
 			<div class="title" th:text="#{PLTF_T_LOGIN_BOX_HEADER}"></div>
-			<div class="username"><img th:src="@{/platform/img/login/username.png}" class="login-input" alt="Username" /><input type="text" id="username" name="username" th:placeholder="#{PLTF_L_USERNAME}" autofocus /></div>
+			<div class="username"><img th:src="@{/platform/img/login/username.png}" class="login-input" alt="Username" /><input type="text" id="username" name="username" th:placeholder="#{PLTF_L_USERNAME}" /></div>
 			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" alt="Password" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_L_PASSWORD}" /></div>
 			<button class="btn-login" type="button" th:text="#{PLTF_B_LOGIN}"></button>
 			<div class="bottom"> 
@@ -225,7 +217,7 @@ function showLoginBox()
 			</div>
 		</div>
 	</div>
-	<div class="bottom" style="height: 100px;">
+	<div class="bottom" style="height: 80px;">
 		<div class="copy-right">
 			<div class="text"th:text="#{PLTF_T_COPYLEFT}"></div>
 		</div>
